[modify] vscode settings.

--- a/.gitignore
+++ b/.gitignore
@@ -128,11 +128,10 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# vscode
-.vscode/settings.json
-
-# node_modules
-build
-npm-debug.log
-.env
-.DS_Store
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
