--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "python.formatting.provider": "yapf",
   "python.linting.enabled": true,
   "python.linting.pylintEnabled": true,
+  "python.linting.pylintArgs": ["--load-plugins", "pylint_flask_sqlalchemy"],
   "editor.formatOnSave": true,
   "python.pythonPath": "${workspaceFolder}/.venv/Scripts/python.exe"
 }
