--- a/Pipfile
+++ b/Pipfile
@@ -6,9 +6,11 @@ verify_ssl = true
 [dev-packages]
 pylint = "*"
 yapf = "*"
+pylint-flask-sqlalchemy = "*"
 
 [packages]
-flask = "*"
+flask = "==1.1.1"
+flask-sqlalchemy = "==2.4.1"
 
 [requires]
 python_version = "3.8"
