--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
-    "recommendations": [
-        "ms-python.python",
-        "editorconfig.editorconfig"
-    ]
+  "recommendations": [
+    "ms-python.python",
+    "editorconfig.editorconfig",
+    "humao.rest-client"
+  ]
 }
